Added all options Bug fix Some styling

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Bernie Call Tracker</title>
   </head>
-  <body>
+  <body style="background:#efefef;"">
     <div id="root"></div>
     <script src="./client/app.jsx"></script>
   </body>
